// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - new and no subaccounts 1`] = `
<form>
  <Panel.Section>
    <Field
      component={[Function]}
      disabled={false}
      label="API Key Name"
      name="label"
      validate={[Function]}
    />
    <Field
      component={[Function]}
      disabled={false}
      helpText="This assignment is permanent. Leave blank to assign to master account."
      name="subaccount"
    />
  </Panel.Section>
  <Panel.Section>
    <Field
      component={[Function]}
      name="grantsRadio"
      options={
        Array [
          Object {
            "disabled": false,
            "label": "All",
            "value": "all",
          },
          Object {
            "disabled": false,
            "label": "Select",
            "value": "select",
          },
        ]
      }
      title="API Permissions"
    />
    <GrantsCheckboxes
      disabled={false}
      grants={
        Object {
          "grant1": Object {
            "key": "value",
          },
          "grant2": Object {
            "key": "value",
          },
          "grant3": Object {
            "key": "value",
          },
          "grant4": Object {
            "key": "value",
          },
        }
      }
    />
    <Field
      component={[Function]}
      disabled={false}
      helpText="Leaving the field blank will allow access by valid API keys from any IP address."
      label="Allowed IPs"
      name="validIps"
      placeholder="10.20.30.40, 10.20.30.0/24"
      validate={[Function]}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      primary={true}
      size="default"
      submit={true}
    >
      Create API Key
    </Button>
  </Panel.Section>
</form>
`;

exports[`renders correctly - readonly mode 1`] = `
<form>
  <Panel.Section>
    <Field
      component={[Function]}
      disabled={true}
      label="API Key Name"
      name="label"
      validate={[Function]}
    />
    <Field
      component={[Function]}
      disabled={false}
      helpText="This assignment is permanent. Leave blank to assign to master account."
      name="subaccount"
    />
  </Panel.Section>
  <Panel.Section>
    <Field
      component={[Function]}
      name="grantsRadio"
      options={
        Array [
          Object {
            "disabled": true,
            "label": "All",
            "value": "all",
          },
          Object {
            "disabled": true,
            "label": "Select",
            "value": "select",
          },
        ]
      }
      title="API Permissions"
    />
    <GrantsCheckboxes
      disabled={true}
      grants={
        Object {
          "grant1": Object {
            "key": "value",
          },
          "grant2": Object {
            "key": "value",
          },
          "grant3": Object {
            "key": "value",
          },
          "grant4": Object {
            "key": "value",
          },
        }
      }
    />
    <Field
      component={[Function]}
      disabled={true}
      helpText="Leaving the field blank will allow access by valid API keys from any IP address."
      label="Allowed IPs"
      name="validIps"
      placeholder=""
      validate={[Function]}
    />
  </Panel.Section>
</form>
`;

exports[`renders correctly - update and subaccounts 1`] = `
<form>
  <Panel.Section>
    <Field
      component={[Function]}
      disabled={false}
      label="API Key Name"
      name="label"
      validate={[Function]}
    />
    <Field
      component={[Function]}
      disabled={true}
      helpText="This assignment is permanent. Leave blank to assign to master account."
      name="subaccount"
    />
  </Panel.Section>
  <Panel.Section>
    <Field
      component={[Function]}
      name="grantsRadio"
      options={
        Array [
          Object {
            "disabled": false,
            "label": "All",
            "value": "all",
          },
          Object {
            "disabled": false,
            "label": "Select",
            "value": "select",
          },
        ]
      }
      title="API Permissions"
    />
    <GrantsCheckboxes
      disabled={false}
      grants={
        Object {
          "grant1": Object {
            "key": "value",
          },
          "grant2": Object {
            "key": "value",
          },
        }
      }
    />
    <Field
      component={[Function]}
      disabled={false}
      helpText="Leaving the field blank will allow access by valid API keys from any IP address."
      label="Allowed IPs"
      name="validIps"
      placeholder="10.20.30.40, 10.20.30.0/24"
      validate={[Function]}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      primary={true}
      size="default"
      submit={true}
    >
      Update API Key
    </Button>
  </Panel.Section>
</form>
`;

exports[`submits correctly 1`] = `
<form>
  <Panel.Section>
    <Field
      component={[Function]}
      disabled={false}
      label="API Key Name"
      name="label"
      validate={[Function]}
    />
    <Field
      component={[Function]}
      disabled={false}
      helpText="This assignment is permanent. Leave blank to assign to master account."
      name="subaccount"
    />
  </Panel.Section>
  <Panel.Section>
    <Field
      component={[Function]}
      name="grantsRadio"
      options={
        Array [
          Object {
            "disabled": false,
            "label": "All",
            "value": "all",
          },
          Object {
            "disabled": false,
            "label": "Select",
            "value": "select",
          },
        ]
      }
      title="API Permissions"
    />
    <GrantsCheckboxes
      disabled={false}
      grants={
        Object {
          "grant1": Object {
            "key": "value",
          },
          "grant2": Object {
            "key": "value",
          },
          "grant3": Object {
            "key": "value",
          },
          "grant4": Object {
            "key": "value",
          },
        }
      }
    />
    <Field
      component={[Function]}
      disabled={false}
      helpText="Leaving the field blank will allow access by valid API keys from any IP address."
      label="Allowed IPs"
      name="validIps"
      placeholder="10.20.30.40, 10.20.30.0/24"
      validate={[Function]}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      primary={true}
      size="default"
      submit={true}
    >
      Loading...
    </Button>
  </Panel.Section>
</form>
`;
